# mini-drop

./: .gitignore  Makefile  README.md  docker-compose.yml
apiserver/: .dockerignore  Dockerfile  coverage.html  go.mod  go.sum
apiserver/cmd/: main.go
apiserver/internal/client/: drop_client.go
apiserver/internal/db/: db.go
apiserver/internal/e2e/: e2e_test.go
apiserver/internal/handler/: agent_handler.go  heartbeat_handler.go  task_handler.go  task_handler_test.go
apiserver/internal/integration/: task_test.go
apiserver/internal/model/: agent.go  agent_test.go  audit_log.go  task.go  task_status.go  task_test.go
apiserver/internal/service/: agent_service.go  task_service.go  task_service_integration_test.go  task_service_test.go
apiserver/internal/storage/: minio.go
apiserver/proto/: common.pb.go  common.proto  control.pb.go  control.proto  control_grpc.pb.go  healthcheck.pb.go  healthcheck.proto  healthcheck_grpc.pb.go  hotmethod.pb.go  hotmethod.proto  hotmethod_grpc.pb.go
drop/: CMakeLists.txt  Dockerfile  Dockerfile.agent
drop/agent/: main.cpp
drop/common/proto/: common.pb.cc  common.pb.h  common.proto  control.grpc.pb.cc  control.grpc.pb.h  control.pb.cc  control.pb.h  control.proto  healthcheck.grpc.pb.cc  healthcheck.grpc.pb.h  healthcheck.pb.cc  healthcheck.pb.h  healthcheck.proto  hotmethod.grpc.pb.cc  hotmethod.grpc.pb.h  hotmethod.pb.cc  hotmethod.pb.h  hotmethod.proto
drop/server/: main.cpp
scripts/: generate_flamegraph.py  io_trace.bt  upload_perf.py
tests/e2e/: e2e_test.go
web_frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
web_frontend/src/: App.jsx  index.css
web_frontend/src/api/: client.js  tasks.js
web_frontend/src/components/: Layout.jsx
(+3 files in other folders)
